--- a/src/components/maj-button/MajButton.scss
+++ b/src/components/maj-button/MajButton.scss
@@ -1,3 +1,28 @@
+.btn {
+    border: none;
+    cursor: pointer;
+    font-weight: 700;
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+}
+
 .btn-primary {
-    padding: 1rem;
+    background-color: #ffc40c;
+    color: #000000;
+
+    &:hover {
+        background-color: #000000;
+        color: #ffc40c;
+    }
+}
+
+.btn-secondary {
+    border: 1px solid;
+    background-color: #ffffff;
+    color: #ffc40c;
+
+    &:hover {
+        background-color: #ffc40c;
+        color: #000000;
+    }
 }
