MAJ-9 - CSS updates for maj-button.

--- a/src/components/maj-button/MajButton.scss
+++ b/src/components/maj-button/MajButton.scss
@@ -26,3 +26,17 @@
         color: #000000;
     }
 }
+
+.btn-tertiary {
+
+    &:hover {
+
+    }
+}
+
+.btn-quiet {
+
+    &:hover {
+        
+    }
+}
