--- a/src/components/maj-button/MajButton.scss
+++ b/src/components/maj-button/MajButton.scss
@@ -1,4 +1,91 @@
 .maj-btn {
-    color: red;
-    background-color: blue;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    user-select: none;
+    text-align: center;
+    white-space: nowrap;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 0.25rem;
+    padding: 0.375rem 0.75rem;
+    border: 1px solid transparent;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    text-decoration: none;
+    overflow: visible;
+    margin: 0;
+    font-family: inherit;
+
+    &:focus-visible {
+        outline: -webkit-focus-ring-color auto 1px;
+    }
+}
+
+.maj-primary-btn {
+    color: #ffffff;
+    background-color: #007bff;
+    border-color: #007bff;
+
+    &:active {
+        background-color: #0062cc;
+        border-color: #005cbf;
+    }
+
+    &:hover {
+        background-color: #0069d9;
+        border-color: #0062cc;
+    }
+
+    &:focus {
+        box-shadow: 0 0 0 .2rem rgba(0,123,255,.5);
+    }
+}
+
+.maj-secondary-btn {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+
+    &:active {
+        background-color: #545b62;
+        border-color: #4e555b;
+    }
+
+    &:hover {
+        background-color: #5a6268;
+        border-color: #545b62;
+    }
+
+    &:focus {
+        box-shadow: 0 0 0 .2rem rgba(108,117,125,.5)
+    }
+}
+
+.maj-success-btn {
+
+}
+
+.maj-danger-btn {
+
+}
+
+.maj-warning-btn {
+
+}
+
+.maj-info-btn {
+
+}
+
+.maj-light-btn {
+
+}
+
+.maj-dark-btn {
+
+}
+
+.maj-link-btn {
+
 }
