--- a/src/components/maj-button/MajButton.scss
+++ b/src/components/maj-button/MajButton.scss
@@ -10,24 +10,24 @@
     border-radius: 0.25rem;
     padding: 0.375rem 0.75rem;
     border: 1px solid transparent;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     text-decoration: none;
     overflow: visible;
     margin: 0;
     font-family: inherit;
 
-    &:not(:disabled):not(.disabled) {
-        cursor: pointer;
+    &:disabled {
+        background-color: light-dark(rgba(239, 239, 239, 0.3), rgba(19, 1, 1, 0.3));
+        color: light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
+        border-color: light-dark(rgba(118, 118, 118, 0.3), rgba(195, 195, 195, 0.3));
     }
 
     &:focus-visible {
         outline: -webkit-focus-ring-color auto 1px;
     }
 
-    &:disabled {
-        background-color: light-dark(rgba(239, 239, 239, 0.3), rgba(19, 1, 1, 0.3));
-        color: light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
-        border-color: light-dark(rgba(118, 118, 118, 0.3), rgba(195, 195, 195, 0.3));
+    &:not(:disabled):not(.disabled) {
+        cursor: pointer;
     }
 }
 
@@ -36,18 +36,21 @@
     background-color: #007bff;
     border-color: #007bff;
 
-    &:active {
-        background-color: #0062cc;
-        border-color: #005cbf;
-    }
+    &:not(:disabled):not(.disabled) {
 
-    &:hover {
-        background-color: #0069d9;
-        border-color: #0062cc;
-    }
+        &:active {
+            background-color: #0062cc;
+            border-color: #005cbf;
+        }
 
-    &:focus {
-        box-shadow: 0 0 0 .2rem rgba(0,123,255,.5);
+        &:focus {
+            box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .5);
+        }
+
+        &:hover {
+            background-color: #0069d9;
+            border-color: #0062cc;
+        }
     }
 }
 
@@ -56,18 +59,21 @@
     background-color: #6c757d;
     border-color: #6c757d;
 
-    &:active {
-        background-color: #545b62;
-        border-color: #4e555b;
-    }
+    &:not(:disabled):not(.disabled) {
 
-    &:hover {
-        background-color: #5a6268;
-        border-color: #545b62;
-    }
+        &:active {
+            background-color: #545b62;
+            border-color: #4e555b;
+        }
 
-    &:focus {
-        box-shadow: 0 0 0 .2rem rgba(108,117,125,.5)
+        &:focus {
+            box-shadow: 0 0 0 .2rem rgba(108, 117, 125, .5)
+        }
+
+        &:hover {
+            background-color: #5a6268;
+            border-color: #545b62;
+        }
     }
 }
 
@@ -76,18 +82,21 @@
     background-color: #28a745;
     border-color: #28a745;
 
-    &:active {
-        background-color: #1e7e34;
-        border-color: #1c7430;
-    }
+    &:not(:disabled):not(.disabled) {
 
-    &:hover {
-        background-color: #218838;
-        border-color: #1e7e34;
-    }
+        &:active {
+            background-color: #1e7e34;
+            border-color: #1c7430;
+        }
 
-    &:focus {
-        box-shadow: 0 0 0 .2rem rgba(40, 167, 69, .5);
+        &:hover {
+            background-color: #218838;
+            border-color: #1e7e34;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 .2rem rgba(40, 167, 69, .5);
+        }
     }
 }
 
@@ -96,18 +105,21 @@
     background-color: #dc3545;
     border-color: #dc3545;
 
-    &:active {
-        background-color: #bd2130;
-        border-color: #b21f2d;
-    }
+    &:not(:disabled):not(.disabled) {
 
-    &:hover {
-        background-color: #c82333;
-        border-color: #bd2130;
-    }
+        &:active {
+            background-color: #bd2130;
+            border-color: #b21f2d;
+        }
 
-    &:focus {
-        box-shadow: 0 0 0 .2rem rgba(220, 53, 69, .5);
+        &:hover {
+            background-color: #c82333;
+            border-color: #bd2130;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 .2rem rgba(220, 53, 69, .5);
+        }
     }
 }
 
@@ -115,20 +127,23 @@
     background-color: #ffc107;
     border-color: #ffc107;
 
-    &:hover {
-        color: #212529;
-        background-color: #e0a800;
-        border-color: #d39e00;
-    }
+    &:not(:disabled):not(.disabled) {
 
-    &:active {
-        color: #212529;
-        background-color: #d39e00;
-        border-color: #c69500;
-    }
+        &:active {
+            color: #212529;
+            background-color: #d39e00;
+            border-color: #c69500;
+        }
 
-    &focus {
-        box-shadow: 0 0 0 .2rem rgba(255, 193, 7, .5);
+        &:focus {
+            box-shadow: 0 0 0 .2rem rgba(255, 193, 7, .5);
+        }
+
+        &:hover {
+            color: #212529;
+            background-color: #e0a800;
+            border-color: #d39e00;
+        }
     }
 }
 
@@ -137,18 +152,21 @@
     background-color: #17a2b8;
     border-color: #17a2b8;
 
-    &:hover {
-        background-color: #138496;
-        border-color: #117a8b;
-    }
+    &:not(:disabled):not(.disabled) {
 
-    &:active {
-        background-color: #117a8b;
-        border-color: #10707f;
-    }
+        &:active {
+            background-color: #117a8b;
+            border-color: #10707f;
+        }
 
-    &:focus {
-        box-shadow: 0 0 0 .2rem rgba(23, 162, 184, .5);
+        &:focus {
+            box-shadow: 0 0 0 .2rem rgba(23, 162, 184, .5);
+        }
+
+        &:hover {
+            background-color: #138496;
+            border-color: #117a8b;
+        }
     }
 }
 
@@ -157,18 +175,21 @@
     background-color: #f8f9fa;
     border-color: #f8f9fa;
 
-    &:hover {
-        background-color: #e2e6ea;
-        border-color: #dae0e5;
-    }
+    &:not(:disabled):not(.disabled) {
 
-    &:active {
-        background-color: #dae0e5;
-        border-color: #d3d9df;
-    }
+        &:active {
+            background-color: #dae0e5;
+            border-color: #d3d9df;
+        }
 
-    &:focus {
-        box-shadow: 0 0 0 .2rem rgba(248, 249, 250, .5);
+        &:focus {
+            box-shadow: 0 0 0 .2rem rgba(248, 249, 250, .5);
+        }
+
+        &:hover {
+            background-color: #e2e6ea;
+            border-color: #dae0e5;
+        }
     }
 }
 
@@ -177,20 +198,22 @@
     background-color: #343a40;
     border-color: #343a40;
 
-    &:hover {
-        background-color: #23272b;
-        border-color: #1d2124;
-    }
+    &:not(:disabled):not(.disabled) {
 
-    &:active {
-        background-color: #1d2124;
-        border-color: #171a1d;
-    }
+        &:active {
+            background-color: #1d2124;
+            border-color: #171a1d;
+        }
 
-    &:focus {
-        box-shadow: 0 0 0 .2rem rgba(52, 58, 64, .5);
-    }
+        &:focus {
+            box-shadow: 0 0 0 .2rem rgba(52, 58, 64, .5);
+        }
 
+        &:hover {
+            background-color: #23272b;
+            border-color: #1d2124;
+        }
+    }
 }
 
 .maj-link-btn {
@@ -198,19 +221,35 @@
     color: #007bff;
     background-color: transparent;
 
-    &:hover {
-        color: #0056b3;
-        text-decoration: underline;
-        background-color: transparent;
-        border-color: transparent;
-    }
+    &:not(:disabled):not(.disabled) {
 
-    &:active {
-        background-image: none;
-    }
+        &:active {
+            background-image: none;
+        }
 
-    &:focus {
-        outline: 0;
-    }
+        &:focus {
+            outline: 0;
+        }
 
+        &:hover {
+            color: #0056b3;
+            text-decoration: underline;
+            background-color: transparent;
+            border-color: transparent;
+        }
+    }
+}
+
+.maj-btn-lg {
+    padding: .5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: .3rem;
+}
+
+.maj-btn-sm {
+    padding: .25rem .5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    border-radius: .2rem;
 }
