MAJ-29 - Added outline variant to button component.

--- a/src/components/maj-button/MajButton.scss
+++ b/src/components/maj-button/MajButton.scss
@@ -10,7 +10,11 @@
     border-radius: 0.25rem;
     padding: 0.375rem 0.75rem;
     border: 1px solid transparent;
-    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    transition:
+        color 0.15s ease-in-out,
+        background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out,
+        box-shadow 0.15s ease-in-out;
     text-decoration: none;
     overflow: visible;
     margin: 0;
@@ -19,7 +23,8 @@
     &:disabled {
         background-color: light-dark(rgba(239, 239, 239, 0.3), rgba(19, 1, 1, 0.3));
         color: light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
-        border-color: light-dark(rgba(118, 118, 118, 0.3), rgba(195, 195, 195, 0.3));
+        border-color: light-dark(rgba(118, 118, 118, 0.3),
+                rgba(195, 195, 195, 0.3));
     }
 
     &:focus-visible {
@@ -31,20 +36,33 @@
     }
 }
 
+.maj-btn-lg {
+    padding: 0.5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: 0.3rem;
+}
+
+.maj-btn-sm {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
+
 .maj-primary-btn {
     color: #ffffff;
     background-color: #007bff;
     border-color: #007bff;
 
     &:not(:disabled):not(.disabled) {
-
         &:active {
             background-color: #0062cc;
             border-color: #005cbf;
         }
 
         &:focus {
-            box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .5);
+            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
         }
 
         &:hover {
@@ -59,16 +77,14 @@
     background-color: #6c757d;
     border-color: #6c757d;
 
-
     &:not(:disabled):not(.disabled) {
-
         &:active {
             background-color: #545b62;
             border-color: #4e555b;
         }
 
         &:focus {
-            box-shadow: 0 0 0 .2rem rgba(108, 117, 125, .5)
+            box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
         }
 
         &:hover {
@@ -84,7 +100,6 @@
     border-color: #28a745;
 
     &:not(:disabled):not(.disabled) {
-
         &:active {
             background-color: #1e7e34;
             border-color: #1c7430;
@@ -96,7 +111,7 @@
         }
 
         &:focus {
-            box-shadow: 0 0 0 .2rem rgba(40, 167, 69, .5);
+            box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
         }
     }
 }
@@ -107,7 +122,6 @@
     border-color: #dc3545;
 
     &:not(:disabled):not(.disabled) {
-
         &:active {
             background-color: #bd2130;
             border-color: #b21f2d;
@@ -119,7 +133,7 @@
         }
 
         &:focus {
-            box-shadow: 0 0 0 .2rem rgba(220, 53, 69, .5);
+            box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
         }
     }
 }
@@ -129,7 +143,6 @@
     border-color: #ffc107;
 
     &:not(:disabled):not(.disabled) {
-
         &:active {
             color: #212529;
             background-color: #d39e00;
@@ -137,7 +150,7 @@
         }
 
         &:focus {
-            box-shadow: 0 0 0 .2rem rgba(255, 193, 7, .5);
+            box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
         }
 
         &:hover {
@@ -154,14 +167,13 @@
     border-color: #17a2b8;
 
     &:not(:disabled):not(.disabled) {
-
         &:active {
             background-color: #117a8b;
             border-color: #10707f;
         }
 
         &:focus {
-            box-shadow: 0 0 0 .2rem rgba(23, 162, 184, .5);
+            box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
         }
 
         &:hover {
@@ -177,14 +189,13 @@
     border-color: #f8f9fa;
 
     &:not(:disabled):not(.disabled) {
-
         &:active {
             background-color: #dae0e5;
             border-color: #d3d9df;
         }
 
         &:focus {
-            box-shadow: 0 0 0 .2rem rgba(248, 249, 250, .5);
+            box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
         }
 
         &:hover {
@@ -200,14 +211,13 @@
     border-color: #343a40;
 
     &:not(:disabled):not(.disabled) {
-
         &:active {
             background-color: #1d2124;
             border-color: #171a1d;
         }
 
         &:focus {
-            box-shadow: 0 0 0 .2rem rgba(52, 58, 64, .5);
+            box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
         }
 
         &:hover {
@@ -223,7 +233,6 @@
     background-color: transparent;
 
     &:not(:disabled):not(.disabled) {
-
         &:active {
             background-image: none;
         }
@@ -241,16 +250,225 @@
     }
 }
 
-.maj-btn-lg {
-    padding: .5rem 1rem;
-    font-size: 1.25rem;
-    line-height: 1.5;
-    border-radius: .3rem;
+.maj-primary-outline-btn {
+    color: #007bff;
+    background-color: transparent;
+    background-image: none;
+    border-color: #007bff;
+
+    &:not(:disabled):not(.disabled) {
+        &:active {
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        &:hover {
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+        }
+    }
 }
 
-.maj-btn-sm {
-    padding: .25rem .5rem;
-    font-size: .875rem;
-    line-height: 1.5;
-    border-radius: .2rem;
+.maj-secondary-outline-btn {
+    color: #6c757d;
+    background-color: transparent;
+    background-image: none;
+    border-color: #6c757d;
+
+    &:not(:disabled):not(.disabled) {
+        &:active {
+            color: #fff;
+            background-color: #6c757d;
+            border-color: #6c757d;
+        }
+
+        &:hover {
+            color: #fff;
+            background-color: #6c757d;
+            border-color: #6c757d;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+        }
+    }
+}
+
+.maj-success-outline-btn {
+    color: #28a745;
+    background-color: transparent;
+    background-image: none;
+    border-color: #28a745;
+
+    &:not(:disabled):not(.disabled) {
+        &:active {
+            color: #fff;
+            background-color: #28a745;
+            border-color: #28a745;
+        }
+
+        &:hover {
+            color: #fff;
+            background-color: #28a745;
+            border-color: #28a745;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+        }
+    }
+}
+
+.maj-danger-outline-btn {
+    color: #dc3545;
+    background-color: transparent;
+    background-image: none;
+    border-color: #dc3545;
+
+    &:not(:disabled):not(.disabled) {
+        &:active {
+            color: #fff;
+            background-color: #dc3545;
+            border-color: #dc3545;
+        }
+
+        &:hover {
+            color: #fff;
+            background-color: #dc3545;
+            border-color: #dc3545;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
+        }
+    }
+}
+
+.maj-warning-outline-btn {
+    color: #ffc107;
+    background-color: transparent;
+    background-image: none;
+    border-color: #ffc107;
+
+    &:not(:disabled):not(.disabled) {
+        &:active {
+            color: #212529;
+            background-color: #ffc107;
+            border-color: #ffc107;
+        }
+
+        &:hover {
+            color: #212529;
+            background-color: #ffc107;
+            border-color: #ffc107;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
+        }
+    }
+}
+
+.maj-info-outline-btn {
+    color: #17a2b8;
+    background-color: transparent;
+    background-image: none;
+    border-color: #17a2b8;
+
+    &:not(:disabled):not(.disabled) {
+        &:active {
+            color: #fff;
+            background-color: #17a2b8;
+            border-color: #17a2b8;
+        }
+
+        &:hover {
+            color: #fff;
+            background-color: #17a2b8;
+            border-color: #17a2b8;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
+        }
+    }
+}
+
+.maj-light-outline-btn {
+    color: #f8f9fa;
+    background-color: transparent;
+    background-image: none;
+    border-color: #f8f9fa;
+
+    &:not(:disabled):not(.disabled) {
+        &:active {
+            color: #212529;
+            background-color: #f8f9fa;
+            border-color: #f8f9fa;
+        }
+
+        &:hover {
+            color: #212529;
+            background-color: #f8f9fa;
+            border-color: #f8f9fa;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
+        }
+    }
+}
+
+.maj-dark-outline-btn {
+    color: #343a40;
+    background-color: transparent;
+    background-image: none;
+    border-color: #343a40;
+
+    &:not(:disabled):not(.disabled) {
+        &:active {
+            color: #fff;
+            background-color: #343a40;
+            border-color: #343a40;
+        }
+
+        &:hover {
+            color: #fff;
+            background-color: #343a40;
+            border-color: #343a40;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
+        }
+    }
+}
+
+.maj-link-outline-btn {
+    font-weight: 400;
+    color: #007bff;
+    background-color: transparent;
+
+    &:not(:disabled):not(.disabled) {
+        &:active {
+            background-image: none;
+        }
+
+        &:hover {
+            color: #0056b3;
+            text-decoration: underline;
+            background-color: transparent;
+            border-color: transparent;
+        }
+
+        &:focus {
+            outline: 0;
+        }
+    }
 }
