MAJ-32 - Updates for autocomplete component.

--- a/src/components/maj-autocomplete/MajAutocomplete.scss
+++ b/src/components/maj-autocomplete/MajAutocomplete.scss
@@ -1,18 +1,24 @@
-.maj-autocomplete {
-    .maj-autocomplete-input {
-        display: flex;
-    }
-
-    .maj-autocomplete-options {
-        display: none;
-    }
+#myDiv {
+    display: none;
+    padding-block: 2px;
+    padding-inline: 3px;
+    position: absolute;
+    background-color:  #d4d4d4;;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
 }
 
-.maj-autocomplete-input {
-    &:active,
-    &:focus {
-        .maj-autocomplete-options {
-            display: flex;
-        }
-    }
+#myInput:focus+#myDiv {
+    display: block;
+}
+
+p {
+    margin: 0;
+}
+
+#myInput,
+#myDiv {
+    width: 100px;
 }
