MAJ-34 - Removed onboarding addon.

--- a/src/components/maj-autocomplete/MajAutocomplete.scss
+++ b/src/components/maj-autocomplete/MajAutocomplete.scss
@@ -3,7 +3,7 @@
     padding-block: 2px;
     padding-inline: 3px;
     position: absolute;
-    background-color:  #d4d4d4;;
+    background-color: #d4d4d4;
     border: 1px solid #d4d4d4;
     border-bottom: none;
     border-top: none;
