--- a/src/components/maj-avatar/MajAvatar.scss
+++ b/src/components/maj-avatar/MajAvatar.scss
@@ -2,6 +2,10 @@
     padding: 1rem;
     background: #edf;
     border-radius: 50%;
+    min-width: 100px;
+    max-width: 100px;
+    min-height: 100px;
+    max-height: 100px;
     .maj-avatar {
         .maj-avatar-initial {
 
