--- a/src/assets/styles/mixins/flex.css
+++ b/src/assets/styles/mixins/flex.css
@@ -7,3 +7,8 @@
     display: flex;
     align-items: $justifyContent;
 }
+
+@mixin align-items $flexDirection: column {
+    display: flex;
+    flex-direction: $flexDirection;
+}
