--- a/src/components/maj-avatar/MajAvatar.scss
+++ b/src/components/maj-avatar/MajAvatar.scss
@@ -1,4 +1,4 @@
-@import url(../../assets/variables.scss);
+@import "../../assets/styles/variables/variables.scss";
 
 .maj-avatar-container {
     border-radius: 50%;
