MAJ-47 - ALign self mixin.

--- a/src/assets/styles/mixins/flex.css
+++ b/src/assets/styles/mixins/flex.css
@@ -12,3 +12,7 @@
     display: flex;
     flex-direction: $flexDirection;
 }
+
+@mixin align-self $alignSelf:center {
+    align-self: $alignSelf;
+}
