--- a/src/components/maj-autocomplete/MajAutocomplete.scss
+++ b/src/components/maj-autocomplete/MajAutocomplete.scss
@@ -17,20 +17,27 @@
 }
 
 #myDiv {
-    cursor: pointer;
+  cursor: pointer;
 
-    div {
-        margin: 0.5rem 0;
-    }
+  div {
+    margin: 0.5rem 0;
+  }
 }
-
-
 
 #myInput,
 #myDiv {
   width: 116px;
   overflow-y: scroll;
   padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  box-shadow:
+    0 9px 8px -3px rgba(64, 60, 67, 0.24),
+    8px 0 8px -7px rgba(64, 60, 67, 0.24),
+    -8px 0 8px -7px rgba(64, 60, 67, 0.24);
+  border: 0;
+  padding-bottom: 4px;
 }
 
 #myDiv::-webkit-scrollbar {
