MAJ-54 - Fixed value not binding to input element.

--- a/src/components/maj-autocomplete/MajAutocomplete.scss
+++ b/src/components/maj-autocomplete/MajAutocomplete.scss
@@ -18,6 +18,10 @@
       8px 0 8px -7px rgba(64, 60, 67, 0.24),
       -8px 0 8px -7px rgba(64, 60, 67, 0.24);
 
+      .maj-option-item {
+        cursor: pointer;
+      }
+
     &::-webkit-scrollbar {
       width: 20px;
     }
