MAJ-80 - Updates for maj-toggle component.

--- a/src/components/maj-toggle/MajToggle.scss
+++ b/src/components/maj-toggle/MajToggle.scss
@@ -26,6 +26,10 @@
             color: #ffffff;
         }
     }
+    .active {
+        background-color: #000000;
+        color: #ffffff;
+    }
     .maj-toggle-one {}
     .maj-toggle-two {}
 }
