MAJ-81 - Updates for maj-toggle component.

--- a/src/components/maj-toggle/MajToggle.scss
+++ b/src/components/maj-toggle/MajToggle.scss
@@ -4,32 +4,66 @@
     -webkit-box-shadow: 1px 1px 8px 1px rgba(0,0,0,1);
     -moz-box-shadow: 1px 1px 8px 1px rgba(0,0,0,1);
     background-color: #ffffff;
+    min-width: 3rem;
+
     .maj-toggle-btn {
         padding: 0.5rem 1rem;
         border-radius: inherit;
         border: none;
         background-color: inherit;
         cursor: pointer;
+
         .maj-toggle-label {
             cursor: inherit;
         }
+
         &:hover {
             background-color: #000000;
             color: #ffffff;
         }
+
         &:active {
             background-color: #000000;
             color: #ffffff;
         }
+
         &:focus {
             background-color: #000000;
             color: #ffffff;
         }
     }
-    .active {
+
+    .maj-toggle-active {
         background-color: #000000;
         color: #ffffff;
     }
-    .maj-toggle-one {}
-    .maj-toggle-two {}
+
+    .maj-default-toggle {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        min-width: inherit;
+        height: inherit;
+        border-radius: 1rem;
+        cursor: pointer;
+
+        .maj-toggle-action {
+            width: 1rem;
+            height: 1rem;
+            border-radius: 1rem;
+            background-color: #000000;
+        }
+    }
+
+    .toggle-start-align {
+        justify-content: flex-start;
+    }
+
+    .toggle-end-align {
+        justify-content: flex-end;
+
+        .maj-toggle-action {
+            background-color: blue;
+        }
+    }
 }
