--- a/src/components/maj-autocomplete/MajAutocomplete.scss
+++ b/src/components/maj-autocomplete/MajAutocomplete.scss
@@ -1,44 +1,49 @@
 .maj-autocomplete-wrapper {
   position: relative;
 
-  .autocomplete-options {
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 500;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    padding: 0.5rem 0.25rem;
-    overflow-y: scroll;
-    max-height: 200px;
-    position: fixed;
-    background-color: #ffffff;
-    box-shadow:
-      0 9px 8px -3px rgba(64, 60, 67, 0.24),
-      8px 0 8px -7px rgba(64, 60, 67, 0.24),
-      -8px 0 8px -7px rgba(64, 60, 67, 0.24);
-
-      .maj-option-item {
-        cursor: pointer;
-      }
-
-    &::-webkit-scrollbar {
-      width: 20px;
-    }
-
-    &::-webkit-scrollbar-track {
-      background-color: transparent;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: #fff;
-      border-radius: 20px;
-      border: 6px solid transparent;
-      background-clip: content-box;
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-      background-color: #000;
-    }
+  input {
+    position: relative;
+    padding: 0.5rem;
   }
+
+  // .autocomplete-options {
+  //   font-family: inherit;
+  //   font-size: 1rem;
+  //   font-weight: 500;
+  //   display: flex;
+  //   flex-direction: column;
+  //   gap: 0.5rem;
+  //   padding: 0.5rem 0.25rem;
+  //   overflow-y: scroll;
+  //   max-height: 200px;
+  //   position: fixed;
+  //   background-color: #ffffff;
+  //   box-shadow:
+  //     0 9px 8px -3px rgba(64, 60, 67, 0.24),
+  //     8px 0 8px -7px rgba(64, 60, 67, 0.24),
+  //     -8px 0 8px -7px rgba(64, 60, 67, 0.24);
+
+  //     .maj-option-item {
+  //       cursor: pointer;
+  //     }
+
+  //   &::-webkit-scrollbar {
+  //     width: 20px;
+  //   }
+
+  //   &::-webkit-scrollbar-track {
+  //     background-color: transparent;
+  //   }
+
+  //   &::-webkit-scrollbar-thumb {
+  //     background-color: #fff;
+  //     border-radius: 20px;
+  //     border: 6px solid transparent;
+  //     background-clip: content-box;
+  //   }
+
+  //   &::-webkit-scrollbar-thumb:hover {
+  //     background-color: #000;
+  //   }
+  // }
 }
