MAJ-328 - Added custom CSS implementation.

--- a/src/components/maj-autocomplete/MajAutocomplete.scss
+++ b/src/components/maj-autocomplete/MajAutocomplete.scss
@@ -2,13 +2,23 @@
 
 .maj-autocomplete-wrapper {
   position: relative;
+  font-family: inherit;
 
   input {
     position: relative;
     padding: 0.5rem;
+    font-family: inherit;
 
     &:focus-within {
       border-color: $primary-border-color;
+    }
+
+    datalist {
+      font-family: inherit;
+
+      option {
+        font-family: inherit;
+      }
     }
   }
 
