MAJ-436 - Updates for maj-divider.

--- a/src/components/maj-divider/MajDivider.scss
+++ b/src/components/maj-divider/MajDivider.scss
@@ -4,6 +4,17 @@
     margin: 0.5rem;
     border-width: 0;
     align-self: stretch;
-    border-style: solid;
     border-top-width: thin;
+}
+
+.solid-divider {
+    border-style: solid;
+}
+
+.dotted-divider {
+    border-style: dotted;
+}
+
+.dashed-divider {
+    border-style: dashed;
 }
